--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,31 @@
-*.py[cod]
-.emacs.desktop
+# general ignores
+*.egg-info
+**/.idea
+.DS_Store
+.idea
+**/__pycache__
+__pycache__
+*/__pycache__
 __pycache__/
 .#*.*
 \#*#
 *.log
-env/
 */db.sqlite3
+
+*.iml
+*.py[cod]
+*.*.py[cod]
+
+# distribution
+build/
+dist/
+
+# venv and vscode
+env/
+venv*/
+.vscode/
+
+# emacs
+.emacs.desktop
+*.*~
+
